--- a/main.css
+++ b/main.css
@@ -85,7 +85,7 @@ p span{
 	flex-wrap: wrap;
 	justify-content: space-around;
 	margin-bottom: 90px;
-	height: 100vh;
+	
 }
 .portfolio-link{
 	margin-right: 15px;
@@ -122,11 +122,14 @@ p span{
 .links-container--item:hover{
 	color:#3df487;
 }
+.links-container--item a{
+	margin-right: 30px;
+}
 a{
 	text-decoration: none;
 	color:#fff;
 	cursor: pointer;
-	margin-right: 30px;
+	
 	transition: 0.2s ease-out 0.1s
 }
 a:hover{
@@ -135,6 +138,7 @@ a:hover{
 @media (min-width: 320px) and (max-width: 730px) {
 	.description{
 		font-size: 19px;
+		line-height: 1.5;
 		padding-right: 0;
 		padding-left: 0;
 	}
@@ -145,7 +149,10 @@ a:hover{
 		width: 280px;
 	}
 	.main-title{
-		font-size: 35px;
+		font-size: 30px;
+	}
+	.title{
+		font-size: 25px;
 	}
 	.buttons,
 	.links-container{
@@ -160,10 +167,21 @@ a:hover{
 	margin-top: 40px;
 	}
 	.button{
-		
+		font-size: 20px;
 		width: 290px;
 	}
+	.links{
+		padding-bottom: 100px;
+	}
+	.links-container{
+		display: block;
+	}
+	.links-container--item {
+    	margin-bottom: 20px;
+    	font-size: 20px;
+    }
 	.portfolio-link{
 		margin-bottom: 13px;
+		margin-right: 0;
 	}
 }
