--- a/main.css
+++ b/main.css
@@ -248,8 +248,8 @@ a:hover{
 @media (min-width: 320px) and (max-width: 730px) {
 	.main-container{
 		width:100%;
-		margin-bottom: 0;
-		margin-top: 0;
+		margin-bottom: 0px;
+		margin-top: 0px;
 	}
 	.description{
 		font-size: 19px;
