--- a/site4/main.css
+++ b/site4/main.css
@@ -1,278 +1,378 @@
-body{
-	font-family: 'Roboto', sans-serif;
-	color: #545E6C;
-	line-height: 1.2;
-	padding-top: 20px;
-	margin: 0;
-	padding: 0;
-	letter-spacing: 0.025em;
 
+body {
+	font-family: 'Arial', sans-serif;
+	-webkit-font-smoothing: antialiased;
+	background: #000;
+	color: #999;
 }
-ul, h1, h2, h3, h4, p, fieldset{
-	margin: 0;
-	padding: 0;
-}
-a{
+a {
+	color: #fff;
 	text-decoration: none;
 }
-header .row{
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	min-height: 100px;
-	padding-top: 60px;
-	padding-bottom: 60px;
+
+p {
+	margin: 0.5rem 0;
 }
 
-header{
-	background: #dcdcdc;
-	width:100%;
-	min-height: 230px;
-	color:#767676;
-
-}
-.container{
-	width:1000px;
-	padding-right: 10px;
-	padding-left: 10px;
-	margin: 0 auto;
-}
-.title{
-	font-size: 24px;
-	color:#9da3d7;
-	text-align: center;
-	margin-bottom: 25px;
-	margin-top: 45px;
-	text-transform: uppercase;
-
+img {
+	width: 100%;
 }
 
-.logo{
-	display: flex;
-	align-items: center;
-}
-.images{
-	width:100px;
-	height:100px;
-	background: #000;
-	margin-right: 15px;
-}
-.logo-title{
-	display: block;
-	font-size: 40px;
-	line-height: 0.8;
-	min-width: 140px;
-}
-.logo-text{
-	min-width: 160px;
-	
-}
-.number{
-	width:100%;
-	text-align: right;
-	font-size: 40px;
-	
-}
-.number-item{
-
-}
-
-/*-------section form start-------*/
-.data{
-	background: url(img/bg.jpg) no-repeat center center #fff;
-	min-height: 300px;
-}
-/* -------form area start-------*/
-form{
-	padding-top: 112px;
-	padding-bottom: 112px;
-}
-fieldset{
-	background: #9da3d7;
-	border:none;
-	width:360px;
-	position: relative;
-	margin-left: 90px;
-}
-legend{
-	position: absolute;
-	top:-30px;
-	right: 50%;
-    transform: translateX(50%);
-    font-size: 24px;
-    color:#9da3d7;
-    letter-spacing: normal;
-    text-transform: uppercase;
-    min-width: 250px;
-}
-label.form-title{
-	display: block;
-	font-size: 24px;
-	text-transform: uppercase;
+.showcase{
 	color:#fff;
-	padding-top: 28px;
+	width:100%;
+	height: 93vh;
+	position: relative;
+	background: url('https://i.ibb.co/vXqDmnh/background.jpg') no-repeat center center/cover #999;
+}
+.showcase::after{
+	content: '';
+	position: absolute;
+	top:0;
+	left: 0;
+	width:100%;
+	height: 100%;
+	z-index: 1;
+	background: rgba(0, 0, 0, 0.6);
+	box-shadow: inset 120px 100px 250px #000000, inset -120px -100px 250px #000000;
+}
+.showcase-top{
+	position: relative;
+	z-index: 2;
+	height: 90px;
+}
+.showcase-top img{
+	width: 170px;
+	position: absolute;
+	top:50%;
+	left:50%;
+	transform: translate(-50%, -50%);
+}
+.showcase-content {
+	position: relative;
+	z-index: 2;
+	width: 65%;
+	margin: auto;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 	text-align: center;
-	margin-bottom: 25px;
+	margin-top: 6rem;
 }
-.data input{
-	display: block;
-	box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	font-size: 24px;
-	width: 290px;
-	height: 50px;
-	margin: 0 auto;
-	margin-bottom: 23px;
-
+.showcase-content{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
-::-webkit-input-placeholder { color: #767676; font-size: 24px; }
-::-moz-placeholder          { color: #767676; font-size: 24px; } 
-:-moz-placeholder           { color: #767676; font-size: 24px; } 
-:-ms-input-placeholder      { color: #767676; font-size: 24px; }
+.showcase-content--title{
+	font-weight: 700;
+    font-size: 80px;
+    line-height: 1.1em;
+    margin: 0 0 30px;
+}
+.showcase-content--text{
+	font-weight: 400;
+    font-size: 30px;
+    line-height: 1.25em;
+    margin: 0 0 30px;
+    text-transform: uppercase;
+}
 
-.btn-phone{
-	display: block;
-	min-width: 250px;
-	margin: 0 auto;
-	margin-bottom: 52px;
-	background: #ffc087;
-	width: 290px;
-	height: 50px;
-	border:none;
-	font-size: 24px;
+/*------------buttons----------------*/
+.btn{
+	background: #e50914;
+	text-decoration: none;
+	display: inline-block;
+	color:#fff;
+	text-align: center;
+	cursor: pointer;
+	margin-right: 0.5rem;
+	transition: opacity 0.2s ease-in;
+	outline: none;
+	box-shadow: 0 1px 0 rgba(0, 0, 0, 0.45);
+	border-radius: 2px;
+}
+.btn:hover{
+	opacity: 0.9;
+}
+.btn-sign{
+	font-size: 16px;
+	padding: 7px 17px;
+	position: absolute;
+	right: 0;
+	top:25%;
+}
+.btn-lg{
+	padding: 1em 1.5em 1em 2em;
 	text-transform: uppercase;
-	color:#000;
+	letter-spacing: 1.9px;
+	font-size: 30px;
+}
+.btn-medium{
+	padding: 1em 1em 1em 1em;
+	text-transform: uppercase;
+	font-size: 16px;
+	letter-spacing: 1.9px;
+}
+.right-icon{
+	height: 30px;
+	width:30px;
+	top:40px;
+	background: #fff;
+}
+
+/*--------utility text ----------*/
+.text-lg{
+	font-size: 30px;
+	margin-bottom: 35px;
+}
+
+/*--------Svg icons----------*/
+.svg-icon{
+	fill: #777;
+	height: 100px;
+	width: 190px;
+}
+
+/*-----------container--------*/
+.container{
+	margin: 0 auto;
+    padding-top: 20px;
+    width: 80%;
+}
+/*-----------tabs--------*/
+.tabs{
+	background: #141414;
+	color: #333;
+    font-size: 16px;
+    border-bottom: 3px solid #3d3d3d;
+}
+
+/* Hide initial content */
+#tab-1-content,
+#tab-2-content,
+#tab-3-content {
+	display: none;
+	opacity: 0;
+}
+.show {
+	display: block !important;
+	opacity: 1 !important;
+	transition: all 1000 ease-in;
+}
+.tabs .container{
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-gap: 10px;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+}
+.tabs .container > div{
+	padding: 50px 0;
+}
+.tab-border{
+	border-bottom: 4px solid #e50914;
+}
+.tab-item--text{
+	font-size: 18px;
+	font-weight: 600;
+}
+.tabs .container > div:hover .svg-icon{
+	cursor: pointer;	
+	color:#fff;
+	fill:#fff;
+}
+.tabs .container > div:hover{
+	color:#fff;
 	cursor: pointer;
 }
-.btn-phone:hover{
-	background: #ffcc9e;
+.tabs .container > div:active{
+	color:#fff;
+	cursor: pointer;
+}
+		/*------tab-1-content section-----*/
+#tab-1-content .tab-1-content-inner{
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-gap: 10px;
+	justify-content: center;
+	align-items: center;
+	color:#fff;
+}
+		/*------tab-2-content section-----*/
+.tab-2-content-top{
+	display: grid;
+	grid-template-columns: 2fr 1fr;
+	align-items: ;
+}
+.tab-2-content-inner .text-lg,
+.tab-2-content-inner h2
+{
+	color:#fff;
+}
+.tab-2-content-inner h2{
+	font-weight: 600;
+}
+.tab-2-content-bottom{
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-gap: 10px;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	margin-top: 30px;
 }
 
-/* -------form area finish-------*/
-
-/*-------section form finish-------*/
-
-
-/*-------section slider start-------*/
-
-.slider-title{
-	color: #9da3d7;
-}
-.slider img{
-	border: 7px solid #fff;
-	-webkit-box-shadow: 3px 0px 8px 0px rgba(0,0,0,0.28);
-	-moz-box-shadow: 3px 0px 8px 0px rgba(0,0,0,0.28);
-	box-shadow: 3px 0px 8px 0px rgba(0,0,0,0.28);
-	
-}
-
-
-
-/*-------section descr start-------*/
-
-.description-title{
-	color:#000;
-}
-.description-text{
-	font-size: 14px;
-}
-
-/*-------section descr finish------*/
-
-
-
-  /*-------section  calc------*/
-.row ul{
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	align-items: flex-end;
+/*tab-3 section*/
+.text-center{
+	display: grid;
+	grid-template-columns: 2fr 1fr;
+	grid-gap: 10px;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	color: #fff;
 
 }
-ul span{
-	display: block;
+.table {
+	width: 100%;
+	margin-top: 2rem;
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+.table thead th {
+	text-transform: uppercase;
+	padding: 0.8rem;
+}
+
+.table tbody {
+	display: table-row-group;
+	vertical-align: middle;
+	border-color: inherit;
+}
+
+.table tbody tr td {
+	color: #999;
+	padding: 0.8rem 1.2rem;
 	text-align: center;
 }
 
-.row-item{
-	display: flex;
-	flex-direction: column;
-	list-style: none;
-	justify-content: space-between;
-	min-height: 180px;
+.table tbody tr td:first-child {
+	text-align: left;
 }
 
+.table tbody tr:nth-child(odd) {
+	background: #222;
+}
+/*footer*/
 
-.row li img{
-	display: block;
-	margin: 0 auto;
-}
-.calc-bg{
-	display: flex;
-	flex-wrap: wrap;
-	margin: 10px;
-	border-radius: 20px;
-	box-shadow:inset  0px 0px 4px 4px rgba(0,0,0,0.3);
-	-webkit-box-shadow: inset  0px 0px 4px 4px rgba(0,0,0,0.3);
-	-moz-box-shadow: inset  0px 0px 4px 4px rgba(0,0,0,0.3);
-	-webkit-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.3);
-	-moz-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.3);
-	box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.3);
-}
-.row ul input{
-	display: none;
-}
-label{
-	cursor:pointer;
-}
-input[type="radio"]:checked+label{
-	color:#0099de;
-	border-bottom: 1px solid #0099de;
-}
-.tab-1,
-.tab-2,
-.tab-3{
-	display: none;
-}
-.open{
-	display: block
-}
-.right-column{
-	display: flex;
-	flex-direction: column;
-}
-.choose-item{
-	display: inline-block;
+.footer {
+	padding-top: 100px;
+	max-width: 70%;
+	margin: 1rem auto;
+	overflow: auto;
 }
 
-.window-height{
-	transform: rotate(-90deg);
+.footer,
+.footer a {
+	color: #999;
+	font-size: 0.9rem;
 }
-  .price{
-   
-    min-height: 200px;
-  
-    /*max-width: 660px;*/
-   
-    /*background:#f9f9f9;*/
+
+.footer p {
+	margin-bottom: 1.5rem;
 }
-.calc_title{
-    font-size: 28px;
-    color: #ee1d25;
-    margin: 0 0 20px;
+
+.footer .footer-cols {
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	grid-gap: 2rem;
 }
-.result{
-    padding: 20px 0 0;
-    margin: 20px 0;
-    font-size: 24px;
-    border-top: 1px solid #e0e0e0;
+
+.footer li {
+	line-height: 1.9;
 }
-span.total{
-    color: #ed1d25;
+
+.footer .lang-select {
+	margin-top: 2rem;
+	color: #999;
+	background-color: #000;
+	background-image: none;
+	border: 1px solid #333;
+	padding: 1rem 1.2rem;
+	border-radius: 5px;
 }
-.calculator input[type="text"], select {
-    padding: 5px 10px;
-    border: 1px solid #ccc;
-    margin-right: 10px;
-    margin-bottom: 10px;
+/*---media---*/
+@media screen and (max-width: 960px) {
+	.showcase{
+		height: 70vh;
+	}
+	.tab-item--text{
+		display: none;
+	}
+	.showcase-top img{
+		width: 170px;
+		position: absolute;
+		top:30%;
+		left:5%;
+		transform: translate(0);
+	}
+	.showcase-content--title{
+		font-size: 60px;
+	}
+	.btn-lg{
+		font-size: 25px;
+	}
+	.footer .footer-cols {
+	
+	grid-template-columns: repeat(2, 1fr);
+}
+@media(max-width: 700px) {
+	.showcase::after {
+		background: rgba(0, 0, 0, 0.6);
+		box-shadow: inset 80px 80px 150px #000000, inset -80px -80px 150px #000000;
+	}
+
+	.showcase-content h1 {
+		font-size: 2.5rem;
+		line-height: 1;
+	}
+
+	.showcase-content p {
+		font-size: 1rem;
+	}
+
+	#tab-1-content .tab-1-content-inner {
+		grid-template-columns: 1fr;
+		text-align: center;
+	}
+
+	#tab-2-content .tab-2-content-top {
+		display: block;
+		text-align: center;
+	}
+
+	#tab-2-content .tab-2-content-bottom {
+		margin-top: 2rem;
+		display: grid;
+		grid-template-columns: 1fr;
+		grid-gap: 2rem;
+		text-align: center;
+	}
+
+	.btn-xl {
+		font-size: 1rem;
+		padding: 1.2rem 1.6rem;
+		text-transform: uppercase;
+	}
+}
+
+@media(max-height: 600px) {
+  .showcase-content {
+	margin-top: 3rem;
+}
 }
