--- a/site6/libs/owl-carousel/assets/owl.theme.default.css
+++ b/site6/libs/owl-carousel/assets/owl.theme.default.css
@@ -6,7 +6,7 @@
 /*
  * 	Default theme - Owl Carousel CSS File
  */
-.owl-theme .owl-nav {
+ .owl-theme .owl-nav {
   margin-top: 10px;
   text-align: center;
   -webkit-tap-highlight-color: transparent; }
@@ -23,89 +23,53 @@
       background: #869791;
       color: #FFF;
       text-decoration: none; }
-  .owl-theme .owl-nav .disabled {
-    opacity: 0.5;
-    cursor: default; }
+      .owl-theme .owl-nav .disabled {
+        opacity: 0.5;
+        cursor: default; }
 
-.owl-theme .owl-nav.disabled + .owl-dots {
-  margin-top: 10px; }
+        .owl-theme .owl-nav.disabled + .owl-dots {
+          margin-top: 10px; }
 
-.owl-theme .owl-dots {
-  text-align: center;
-  -webkit-tap-highlight-color: transparent; }
-  .owl-theme .owl-dots .owl-dot {
-    display: inline-block;
-    zoom: 1;
-    *display: inline; }
-    .owl-theme .owl-dots .owl-dot span {
-      width: 15px;
-      height: 15px;
-      margin: 5px 10px;
-       display: block;
-      -webkit-backface-visibility: visible;
-      transition: opacity 200ms ease;
-      border-radius: 30px; }
-    .owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
-      background: #fff; }
-.owl-theme .owl-dots{
-  position: absolute;
-  bottom: 0;
-  widows: 100%;
-  margin: 0 auto;
-}
+          .owl-theme .owl-dots {
+            text-align: center;
+            -webkit-tap-highlight-color: transparent; }
+            .owl-theme .owl-dots .owl-dot {
+              display: inline-block;
+              zoom: 1;
+              *display: inline; }
+              .owl-theme .owl-dots .owl-dot span {
+                width: 10px;
+                height: 10px;
+                margin: 5px 7px;
+                background: #D6D6D6;
+                display: block;
+                -webkit-backface-visibility: visible;
+                transition: opacity 200ms ease;
+                border-radius: 30px; }
+                .owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
+                  background: #869791; }
 
-.owl-theme .owl-nav [class*='owl-']:hover {
-  background: #302d57;
-  opacity: 0.8;
-}
-/*=============sbuttons prev next BIG SLIDER================*/
 
-.material-section .owl-carousel .owl-nav button.owl-prev{
-  position: absolute;
-  cursor: pointer;
-  background:rgba(253, 144, 103, 0.8);
-  color: #fff;
-  width:40px;
-  height: 40px;
-  border-radius: 50%;
-  top: 10%;
-  left: -5%;
-}
-.material-section .owl-carousel .owl-nav button.owl-next{
-   position: absolute;
-   cursor: pointer;
-  background:rgba(253, 144, 103, 0.8);
-  color: #fff;
- width:40px;
-  height: 40px;
-  border-radius: 50%;
-  top: 10%;
-  right:-5%;
-}
 
-/*=============sbuttons prev next SMALL SLIDER================*/
-.owl-carousel .owl-nav button.owl-prev{
-  position: absolute;
-  cursor: pointer;
-  background:rgba(253, 144, 103, 0.8);
-  color: #fff;
-  width:50px;
-  height: 50px;
 
-  border-radius: 50%;
-  top: 50%;
-  left: 0;
-   transform: translateY(-50%);
-}
-.owl-carousel .owl-nav button.owl-next{
-   position: absolute;
-   cursor: pointer;
-  background:rgba(253, 144, 103, 0.8);
-  color: #fff;
-  width:50px;
-  height: 50px;
-  border-radius: 50%;
- top: 50%;
-  right: 0;
-  transform: translateY(-50%);
-}
+                  body > header > div > div.top-slider.owl-drag > div.row > div.owl-carousel.owl-theme.owl-loaded.top-slider.owl-drag > div.owl-nav{
+                    display: none;
+                  }
+                  body > header > div > div.top-slider.owl-drag > div.owl-nav > button.owl-prev{
+                    position: absolute;
+                    bottom: -8%;
+                    left: -1.5%;
+                    cursor: pointer;
+                    background: none;
+                    color:#fff;
+                    font-size: 45px;
+                  }
+                  body > header > div > div.top-slider.owl-drag > div.owl-nav > button.owl-next{
+                    position: absolute;
+                    bottom: -8%;
+                    left: 8%;
+                    cursor: pointer;
+                    background: none;
+                    color:#fff;
+                    font-size: 45px;
+                  }
