--- a/site6/css/style.css
+++ b/site6/css/style.css
@@ -536,7 +536,7 @@ input[type="button"] {
           .reply-item{
             min-height: 450px;position: relative;
           }
-          .reply-item div{
+          .reply-item .row-bottom-replay{
            display: flex;
            position: absolute;
            bottom: 0;
@@ -564,10 +564,30 @@ input[type="button"] {
          background: #e7312a;
          color: #fff;
        }
-       iframe{
-         display: block;
-         margin: 0 auto;
-       }
+       .iframe-box{
+        display: block;
+        width:290px;
+        height: 200px;
+        position: relative;
+        margin: 0 auto;
+        cursor: pointer;
+        background: url(../img/отзыв.jpg) no-repeat center center/cover;
+      }
+      .iframe-box:hover{
+        background: url(../img/отзыв.jpg) no-repeat center center/cover ;
+        box-shadow: inset 0 0 0 1000px rgba(231, 49, 42,.5);;
+      }
+      .iframe-box img{
+        position: relative;
+        padding: 50px;
+        top:50%;
+        left:50%;
+        transform: translate(-50%, -50%);
+      }
+      iframe{
+       display: block;
+       margin: 0 auto;
+     }
 /*==========================================================
 						MATERIAL SECTION
             ===========================================================*/
